--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,35 @@
-<div class="container container-user">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>jQuery CRUDdy</title>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/jquery-cruddy.css" rel="stylesheet">
+
+    <style>
+      /* For example page only. Not part of cruddy. */
+      body{ margin: 40px 0 200px 0}
+    </style>
+</head>
+<body>
+
+
+  <div class="container">
+    <div class="jumbotron">
+      <h1>CRUD<sup>dy</sup></h1> 
+      <p>A jQuery plugin to assist with API driven CRUD tasks.</p> 
+    </div>
+  </div>
+
+
+ <div class="container container-user">
+   <div class="row">
+      <div class="col-md-12">
 
         <div id="modal-create-edit" class="modal fade" role="dialog">
           <div class="modal-dialog">
@@ -9,11 +38,11 @@
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">
-                      @{{if id}}
-                        Edit #@{{:id}}
-                      @{{else}}
+                      {{if id}}
+                        Edit #{{:id}}
+                      {{else}}
                         Create
-                      @{{/if}}
+                      {{/if}}
                 </h4>
               </div>
               <div class="modal-body">
@@ -24,7 +53,7 @@
                     <label class="col-md-4 control-label">Full Name</label>
 
                     <div class="col-md-6">
-                        <input name="name" class="form-control" value="@{{:name}}">
+                        <input name="name" class="form-control" value="{{:name}}">
                         <span class="help-block hide">
                             <strong>ii</strong>
                         </span>                                
@@ -35,7 +64,7 @@
                     <label class="col-md-4 control-label">E-Mail Address</label>
 
                     <div class="col-md-6">
-                        <input name="email" class="form-control" value="@{{:email}}">
+                        <input name="email" class="form-control" value="{{:email}}">
                         <span class="help-block hide">
                             <strong>ii</strong>
                         </span>                                
@@ -44,25 +73,22 @@
 
               </div>
               <div class="modal-footer">
-                <input name="id" class="hide" value="@{{:id}}">
+                <input name="id" class="hide" value="{{:id}}">
                 <button type="submit" class="btn btn-success">
-                  @{{if id}}
+                  {{if id}}
                     Save
-                  @{{else}}
+                  {{else}}
                     Create
-                  @{{/if}}
+                  {{/if}}
                 </button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
           </script>
-          <form action="/api/admin/user" class="create-edit"></form>
+          <form action="json/form-errors.php" class="create-edit"></form>
           </div>
         </div>
        
-
-
-
         <div class="alert-control alert"></div>
 
         <div class="row">
@@ -74,6 +100,7 @@
             <button type="button" class="btn btn-primary btn-create" data-toggle="modal" data-target="#modal-create-edit">Create New</button>
           </div>
         </div>
+
         <hr>
 
         <div class="panel panel-default panel-table">
@@ -96,7 +123,7 @@
             </div>
           </div>
           <div class="panel-body">
-            <table class="table table-striped table-bordered table-list" data-url="/api/admin/user">
+            <table class="table table-striped table-bordered table-list" data-url="json/list.json">
               <thead>
                 <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs" data-col="id">ID <em class="fa fa-fw fa-sort pull-right em-sort"></th>
@@ -125,23 +152,41 @@
           </div>
         </div>
 
+     </div>
+   </div>
+ </div>
 
-            <script id="row-item" type="text/x-jsrender">
-              <tr>
-                <td align="center">
-                  <button type="button" class="btn btn-default" data-action="read" data-href="/api/admin/user/@{{:id}}" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
-                  <button type="button" class="btn btn-danger" data-action="delete" data-href="/api/admin/user/@{{:id}}"><em class="fa fa-trash"></em></button>
-                </td>
-                <td class="hidden-xs">@{{:id}}</td>
-                <td>@{{:name}}</td>
-                <td>@{{:email}}</td>
-              </tr>
-            </script>
 
-            <script id="list-pagination" type="text/x-jsrender">
-              <ul class="pagination pull-right">
-                @{{if prev_page_url}}<li><span data-href="@{{:prev_page_url}}">&laquo;</span></li>@{{/if}}
-                <li><span disabled>@{{:current_page}} of @{{:last_page}}</span></li>
-                @{{if next_page_url}}<li><span data-href="@{{:next_page_url}}">&raquo;</span></li>@{{/if}}
-              </ul>
-            </script>
+
+
+<script id="row-item" type="text/x-jsrender">
+  <tr>
+    <td align="center">
+      <button type="button" class="btn btn-default" data-action="read" data-href="json/{{:id}}.php" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
+      <button type="button" class="btn btn-danger" data-action="delete" data-href="/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
+    </td>
+    <td class="hidden-xs">{{:id}}</td>
+    <td>{{:name}}</td>
+    <td>{{:email}}</td>
+  </tr>
+</script>
+
+<script id="list-pagination" type="text/x-jsrender">
+  <ul class="pagination pull-right">
+    {{if prev_page_url}}<li><span data-href="{{:prev_page_url}}">&laquo;</span></li>{{/if}}
+    <li><span disabled>{{:current_page}} of {{:last_page}}</span></li>
+    {{if next_page_url}}<li><span data-href="{{:next_page_url}}">&raquo;</span></li>{{/if}}
+  </ul>
+</script>
+
+<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/0.9.73/jsrender.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="js/jquery-cruddy.js"></script>
+
+<script>
+  $('.container-user').cruddy();
+</script>
+
+</body>
+</html>
