--- a/src/index.html
+++ b/src/index.html
@@ -185,13 +185,7 @@
 <script src="js/jquery-cruddy.js"></script>
 
 <script>
-  $('.container-user').cruddy({
-      templates: {
-        create_edit:  $.templates("#create-edit"),
-        pagination:   $.templates("#list-pagination"),
-        row:          $.templates("#row-item")
-      }
-  });
+  $('.container-user').cruddy();
 </script>
 </body>
 </html>
