--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/jquery-cruddy.css" rel="stylesheet">
+    <link href="../src/css/jquery-cruddy.css" rel="stylesheet">
 
     <style>
       /* For example page only. Not part of cruddy. */
@@ -85,7 +85,7 @@
               </div>
             </div>
           </script>
-          <form action="json/form-errors.php" class="create-edit"></form>
+          <form action="https://cruddy.io/app/api/admin/user/" class="create-edit"></form>
           </div>
         </div>
        
@@ -123,7 +123,7 @@
             </div>
           </div>
           <div class="panel-body">
-            <table class="table table-striped table-bordered table-list" data-url="json/list.json">
+            <table class="table table-striped table-bordered table-list" data-url="https://cruddy.io/app/api/admin/user?page=1&sort=id&direction=asc&limit=10">
               <thead>
                 <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs" data-col="id">ID <em class="fa fa-fw fa-sort pull-right em-sort"></th>
@@ -158,12 +158,18 @@
 
 
 
+<script id="no-results" type="text/x-jsrender">
+  <tr>
+    <td colspan="5"><strong>No Results Found.</strong></td>
+  </tr>
+</script>
+
 
 <script id="row-item" type="text/x-jsrender">
   <tr>
     <td align="center">
-      <button type="button" class="btn btn-default" data-action="read" data-href="json/{{:id}}.php" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
-      <button type="button" class="btn btn-danger" data-action="delete" data-href="/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
+      <button type="button" class="btn btn-default" data-action="read" data-href="https://cruddy.io/app/api/admin/user/{{:id}}.php" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
+      <button type="button" class="btn btn-danger" data-action="delete" data-href="https://cruddy.io/app/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
     </td>
     <td class="hidden-xs">{{:id}}</td>
     <td>{{:name}}</td>
@@ -182,7 +188,7 @@
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/0.9.73/jsrender.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="js/jquery-cruddy.js"></script>
+<script src="../src/js/jquery-cruddy.js"></script>
 
 <script>
   $('.container-user').cruddy();
