--- a/tests/index.html
+++ b/tests/index.html
@@ -168,7 +168,7 @@
 <script id="row-item" type="text/x-jsrender">
   <tr>
     <td align="center">
-      <button type="button" class="btn btn-default" data-action="read" data-href="https://cruddy.io/app/api/admin/user/{{:id}}.php" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
+      <button type="button" class="btn btn-default" data-action="read" data-href="https://cruddy.io/app/api/admin/user/{{:id}}" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
       <button type="button" class="btn btn-danger" data-action="delete" data-href="https://cruddy.io/app/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
     </td>
     <td class="hidden-xs">{{:id}}</td>
