--- a/tests/index.html
+++ b/tests/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1>CRUD<sup>dy</sup></h1> 
-      <p>A jQuery plugin to assist with API driven CRUD tasks.</p> 
+      <p>A jQuery plugin to assist with JSON API driven CRUD tasks.</p> 
     </div>
   </div>
 
@@ -85,17 +85,17 @@
               </div>
             </div>
           </script>
-          <form action="https://cruddy.io/app/api/admin/user/" class="create-edit"></form>
+          <form action="https://cruddy.io/app/api/admin/user" class="create-edit"></form>
           </div>
         </div>
        
         <div class="alert-control alert"></div>
 
         <div class="row">
-          <div class="col-xs-8">
+          <div class="col-sm-6 hidden-xs">
             <h1 style="margin:0">User Management</h1>
           </div>
-          <div class="col-xs-4 text-right">
+          <div class="col-sm-6 col-xs-12 text-right">
             <button type="button" class="btn btn-default btn-refresh"><em class="fa fa-refresh"></em></button>
             <button type="button" class="btn btn-primary btn-create" data-toggle="modal" data-target="#modal-create-edit">Create New</button>
           </div>
@@ -123,7 +123,7 @@
             </div>
           </div>
           <div class="panel-body">
-            <table class="table table-striped table-bordered table-list" data-url="https://cruddy.io/app/api/admin/user?page=1&sort=id&direction=asc&limit=10">
+            <table class="table table-striped table-bordered table-list" data-href="https://cruddy.io/app/api/admin/user?page=1&sort=id&direction=asc&limit=10">
               <thead>
                 <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs" data-col="id">ID <em class="fa fa-fw fa-sort pull-right em-sort"></th>
@@ -184,6 +184,13 @@
     {{if next_page_url}}<li><span data-href="{{:next_page_url}}">&raquo;</span></li>{{/if}}
   </ul>
 </script>
+
+<h2>To-do:</h2>
+<ul>
+  <li>Clean up error: functions from ajax, response codes arent pretty</li>
+  <li>Alert template for confirms or w/e</li>
+<ul>
+
 
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrender/0.9.73/jsrender.min.js"></script>
