Adding error translations Switch return this to return this.callback to aid with extending

--- a/tests/index.html
+++ b/tests/index.html
@@ -189,7 +189,7 @@
 <ul>
   <li>Clean up error: functions from ajax, response codes arent pretty</li>
   <li>Alert template for confirms or w/e</li>
-  <li>replace var plugin = this with a global plugin var...
+  <li>replace var plugin = this with a global plugin var...?
 <ul>
 
 
