Added single/array value to callbacks depending on what called it Fixed bugs with lang, again, found solution for to-do

--- a/tests/index.html
+++ b/tests/index.html
@@ -197,7 +197,7 @@
 <script src="../src/js/jquery-cruddy.js"></script>
 
 <script>
-  $('.container-user').cruddy();
+  $('.container-user').cruddy({'onLog': function(data){console.log(data)}});
 </script>
 </body>
 </html>
