--- a/tests/index.html
+++ b/tests/index.html
@@ -217,6 +217,7 @@
 <h2>To-do:</h2>
 <ul>
   <li>create user needs to switch to edit user, or close (opt)</li>
+  <li>API: change 'results' to 'data'</li>
 <ul>
 
 
