--- a/tests/index.html
+++ b/tests/index.html
@@ -30,36 +30,6 @@
  <div class="container container-user">
    <div class="row">
       <div class="col-md-12">
-
-
-
-        <div id="modal-alert" class="modal fade" role="dialog">
-          <div class="modal-dialog">
-          <script id="modal-alert" type="text/x-jsrender">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">
-                  {{ :title }}
-                </h4>
-              </div>
-              <div class="modal-body">
-                {{ :body }}
-              </div>
-              <div class="modal-footer">
-                {{ :footer }}
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </script>
-          </div>
-        </div>
-
-
-
-
-
-
         <div id="modal-create-edit" class="modal fade" role="dialog">
           <div class="modal-dialog">
           <script id="create-edit" type="text/x-jsrender">
@@ -82,9 +52,9 @@
                     <label class="col-md-4 control-label">Full Name</label>
 
                     <div class="col-md-6">
-                        <input name="name" class="form-control" value="{{:name}}">
+                        <input name="name" class="form-control" value="{{:attributes.name}}">
                         <span class="help-block hide">
-                            <strong>ii</strong>
+                            <strong></strong>
                         </span>                                
                     </div>
                 </div>
@@ -93,9 +63,9 @@
                     <label class="col-md-4 control-label">E-Mail Address</label>
 
                     <div class="col-md-6">
-                        <input name="email" class="form-control" value="{{:email}}">
+                        <input name="email" class="form-control" value="{{:attributes.email}}">
                         <span class="help-block hide">
-                            <strong>ii</strong>
+                            <strong></strong>
                         </span>                                
                     </div>
                 </div>
@@ -114,7 +84,7 @@
               </div>
             </div>
           </script>
-          <form action="https://cruddy.io/app/api/admin/user" class="create-edit"></form>
+          <form action="http://localhost:8000/api/admin/user" class="create-edit"></form>
           </div>
         </div>
        
@@ -152,7 +122,7 @@
             </div>
           </div>
           <div class="panel-body">
-            <table class="table table-striped table-bordered table-list" data-href="https://cruddy.io/app/api/admin/user?page=1&sort=id&direction=asc&limit=10">
+            <table class="table table-striped table-bordered table-list" data-href="http://localhost:8000/api/admin/user?page=1&sort=id&direction=asc&limit=10">
               <thead>
                 <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs" data-col="id">ID <em class="fa fa-fw fa-sort pull-right em-sort"></th>
@@ -197,20 +167,20 @@
 <script id="row-item" type="text/x-jsrender">
   <tr>
     <td align="center">
-      <button type="button" class="btn btn-default" data-action="read" data-href="https://cruddy.io/app/api/admin/user/{{:id}}" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
-      <button type="button" class="btn btn-danger" data-action="delete" data-href="https://cruddy.io/app/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
+      <button type="button" class="btn btn-default" data-action="read" data-href="http://localhost:8000/api/admin/user/{{:id}}" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
+      <button type="button" class="btn btn-danger" data-action="delete" data-href="http://localhost:8000/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
     </td>
     <td class="hidden-xs">{{:id}}</td>
-    <td>{{:name}}</td>
-    <td>{{:email}}</td>
+    <td>{{:attributes.name}}</td>
+    <td>{{:attributes.email}}</td>
   </tr>
 </script>
 
 <script id="list-pagination" type="text/x-jsrender">
   <ul class="pagination pull-right">
-    {{if prev_page_url}}<li><span data-href="{{:prev_page_url}}">&laquo;</span></li>{{/if}}
-    <li><span disabled>{{:current_page}} of {{:last_page}}</span></li>
-    {{if next_page_url}}<li><span data-href="{{:next_page_url}}">&raquo;</span></li>{{/if}}
+    {{if links.prev}}<li><span data-href="{{:links.prev}}">&laquo;</span></li>{{/if}}
+    <li><span disabled>{{:meta.current_page}} of {{:meta.total_pages}}</span></li>
+    {{if links.next}}<li><span data-href="{{:links.next}}">&raquo;</span></li>{{/if}}
   </ul>
 </script>
 
