--- a/tests/index.html
+++ b/tests/index.html
@@ -84,7 +84,7 @@
               </div>
             </div>
           </script>
-          <form action="http://localhost:8000/api/admin/user" class="create-edit"></form>
+          <form action="https://cruddy.io/app/api/admin/user" class="create-edit"></form>
           </div>
         </div>
        
@@ -122,7 +122,7 @@
             </div>
           </div>
           <div class="panel-body">
-            <table class="table table-striped table-bordered table-list" data-href="http://localhost:8000/api/admin/user?page=1&sort=id&direction=asc&limit=10">
+            <table class="table table-striped table-bordered table-list" data-href="https://cruddy.io/app/api/admin/user">
               <thead>
                 <th><em class="fa fa-cog"></em></th>
                 <th class="hidden-xs" data-col="id">ID <em class="fa fa-fw fa-sort pull-right em-sort"></th>
@@ -167,8 +167,8 @@
 <script id="row-item" type="text/x-jsrender">
   <tr>
     <td align="center">
-      <button type="button" class="btn btn-default" data-action="read" data-href="http://localhost:8000/api/admin/user/{{:id}}" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
-      <button type="button" class="btn btn-danger" data-action="delete" data-href="http://localhost:8000/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
+      <button type="button" class="btn btn-default" data-action="read" data-href="https://cruddy.io/app/api/admin/user/{{:id}}" data-toggle="modal" data-target="#modal-create-edit"><em class="fa fa-pencil"></em></button>
+      <button type="button" class="btn btn-danger" data-action="delete" data-href="https://cruddy.io/app/api/admin/user/{{:id}}"><em class="fa fa-trash"></em></button>
     </td>
     <td class="hidden-xs">{{:id}}</td>
     <td>{{:attributes.name}}</td>
